Finished the UI

--- a/AppDev2ndCW/Views/Admin/ManageUsers.cshtml
+++ b/AppDev2ndCW/Views/Admin/ManageUsers.cshtml
@@ -44,7 +44,7 @@
                                             <td>
                                                 <ul class="list-inline m-0">
                                                     <li class="list-inline-item">
-                                                        <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                                                        <a href="@Url.ActionLink("UpdateUsers", "Admin")" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a>
                                                     </li>
                                                     <li class="list-inline-item">
                                                         <a href="@Url.Action("DeleteUsers","Admin",new { item.id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
