--- a/AppDev2ndCW/Views/Users/InactiveCustomers.cshtml
+++ b/AppDev2ndCW/Views/Users/InactiveCustomers.cshtml
@@ -13,6 +13,7 @@
                         <img src="/img/inactive_customers.svg" alt="Users SVG" class="img-fluid" />
                     </div>
                 </div>
+                <p><code>The following customers have not purchased anything since last 31 days.</code></p>
             </div>
         </div>
     </div>
