--- a/AppDev2ndCW/Views/Users/InactiveItems.cshtml
+++ b/AppDev2ndCW/Views/Users/InactiveItems.cshtml
@@ -11,6 +11,7 @@
                     </div>
                 </div>
                 <p class="h3">Inactive Items</p>
+                <p><code>The following items have not been sold for the last 31 days.</code></p>
             </div>
         </div>
     </div>
