--- a/AppDev2ndCW/Views/Users/LongStocked.cshtml
+++ b/AppDev2ndCW/Views/Users/LongStocked.cshtml
@@ -6,12 +6,12 @@
         <div class="col-md-6 mx-auto">
             <div class="text-center">
                 <p class="h3">Long Stocked Items</p>
-                <p><code>These books have been in stock for a long time</code></p>
                 <div class="row my-4">
                     <div class="col-md-8 mx-auto">
                         <img src="/img/long_stocked.svg" alt="Out of Stock SVG" class="img-fluid" />
                     </div>
                 </div>
+                <p><code>These books have been in stock for a long time.</code></p>
             </div>
         </div>
     </div>
