--- a/AppDev2ndCW/Views/Users/OutOfStock.cshtml
+++ b/AppDev2ndCW/Views/Users/OutOfStock.cshtml
@@ -11,6 +11,7 @@
                     </div>
                 </div>
                 <p class="h3">Items Out of Stock</p>
+                <p><code>The following list of items are currently out of stock</code></p>
             </div>
         </div>
     </div>
