--- a/AppDev2ndCW/Views/Sales/MakeSales.cshtml
+++ b/AppDev2ndCW/Views/Sales/MakeSales.cshtml
@@ -16,42 +16,21 @@
                 <form action="" method="post">
                     <div class="row">
 
-                        <!-- Book -->
+                        <!-- Customer -->
                         <div class="input-group col-lg-12 mb-4">
                             <div class="input-group-prepend">
                                 <span class="input-group-text bg-white px-4 border-md border-right-0">
                                     <i class="fa fa-book text-muted"></i>
                                 </span>
                             </div>
-                            <select id="book" name="booktitle" class="form-control custom-select bg-white border-left-0 border-md">
-                                <option value="">Choose the purchased book</option>
-                                <option value="">The Alchemist</option>
-                                <option value="">How's your Soul?</option>
-                                <option value="">Goliath Must Fall</option>
-                                <option value="">In My Dreams</option>
+                            <select id="customer" name="customer" class="form-control custom-select bg-white border-left-0 border-md">
+                                <option value="">Please choose a customer</option>
+                                <option value="">James</option>
+                                <option value="">John</option>
+                                <option value="">Joseph</option>
+                                <option value="">Judah</option>
                             </select>
                         </div>
-
-                        <!-- Quantity -->
-                        <div class="input-group col-lg-6 mb-4">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-right-0">
-                                    <i class="fa fa-list-ol text-muted"></i>
-                                </span>
-                            </div>
-                            <input id="quantity" type="text" name="number" placeholder="Purchased Quantity" class="form-control bg-white border-left-0 border-md" required>
-                        </div>
-
-                        <!-- Total -->
-                        <div class="input-group col-lg-12 mb-4">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-white px-4 border-md border-right-0">
-                                    <i class="fa fa-calculator text-muted"></i>
-                                </span>
-                            </div>
-                            <input id="amount" type="text" name="totalamount" placeholder="Purchased Total Amount" class="form-control bg-white border-left-0 border-md" required>
-                        </div>
-
 
                         <!-- Submit Button -->
                         <div class="form-group col-lg-12 mx-auto mb-0">
