--- a/AppDev2ndCW/Views/Sales/Saleitems.cshtml
+++ b/AppDev2ndCW/Views/Sales/Saleitems.cshtml
@@ -24,6 +24,9 @@
             <div class="col-lg-9 mx-auto">
                 <div class="card border-0 shadow">
                     <div class="card-body p-5">
+                        <div class="my-3">
+                            <a href="@Url.ActionLink("AddSaleItem", "Sales")" class="btn btn-primary">Add Sale Item <i class="fas fa-plus-square ml-2"></i></a>
+                        </div>
                         <div class="table-responsive">
                             <table class="table m-0">
                                 <thead>
@@ -32,6 +35,7 @@
                                         <th scope="col">Book Title</th>
                                         <th scope="col">Quantity</th>
                                         <th scope="col">Total</th>
+                                        <th scope="col">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -41,6 +45,13 @@
                                         <td>The Alchemist</td>
                                         <td>2</td>
                                         <td>1000</td>
+                                        <td>
+                                            <ul>
+                                                <li class="list-inline-item">
+                                                    <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                                                </li>
+                                            </ul>
+                                        </td>
                                     </tr>
 
                                 </tbody>
@@ -50,6 +61,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="text-center">
+            <a href="@Url.ActionLink("GenerateBill", "Sales")" class="btn btn-primary">Generate Bill for this Sale <i class="fas fa-file-invoice ml-2"></i></a>
         </div>
     </div>
 </div>
