Normal user and Admin user Login Dispute Solved

--- a/AppDev2ndCW/Views/Admin/Home.cshtml
+++ b/AppDev2ndCW/Views/Admin/Home.cshtml
@@ -65,6 +65,7 @@ else if (ViewBag.islogin)
     @if (@c.Value.Equals("Admin"))
     {
         <h1>@c.Value</h1>
+        <h1>Welcome Admin!!!</h1>
     }
 }
 
