--- a/AppDev2ndCW/Views/Books/Authors.cshtml
+++ b/AppDev2ndCW/Views/Books/Authors.cshtml
@@ -1,5 +1,22 @@
 ﻿@{ Layout = "_DashboardLayout"; }
-
+@if (ViewBag.issuccess)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>New author added successfully!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+else if (ViewBag.isdeleteaut)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>Author Deleted!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
 <div class="container">
     <header class="text-center">
         <h1 class="display-4 font-weight-bold">Add New Book Author</h1>
@@ -57,13 +74,20 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>Judah Smith</td>
-                                        <th>
-                                            <a href="" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
-                                        </th>
-                                    </tr>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>@item.Id</td>
+                                            <td>@item.Author</td>
+                                            <td>
+                                                <ul class="list-inline m-0">
+                                                    <li class="list-inline-item">
+                                                        <a href="@Url.Action("DeleteAuthors","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
 
