--- a/AppDev2ndCW/Views/Books/UpdateBooks.cshtml
+++ b/AppDev2ndCW/Views/Books/UpdateBooks.cshtml
@@ -75,6 +75,42 @@
                             <input id="price" type="number" name="rate" placeholder="Price" class="form-control bg-white border-left-0 border-md">
                         </div>
 
+                        <!-- Stock Quantity -->
+                        <div class="input-group col-lg-6 mb-4" required>
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                    <i class="fa fa-list-ol text-muted"></i>
+                                </span>
+                            </div>
+                            <input id="quantity" type="number" name="quantity" placeholder="Quantity in Stock" class="form-control bg-white border-left-0 border-md">
+                        </div>
+
+                        <!-- Last Stocked Date -->
+                        <div class="col-md-6 mb-0">
+                            <label for="lastStockedDate">Last Stocked Date <i class="fas fa-ellipsis-h ml-2"></i></label>
+                        </div>
+                        <div class="input-group col-lg-12 mb-4">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                    <i class="fa fa-calendar text-muted"></i>
+                                </span>
+                            </div>
+                            <input type="date" name="lastStockedDate" placeholder="" class="form-control py-4 px-4" id="lastStockedDate">
+                        </div>
+
+                        <!-- Last Sales Date -->
+                        <div class="col-md-6 mb-0">
+                            <label for="lastSalesDate">Last Sales Date <i class="fas fa-ellipsis-h ml-2"></i></label>
+                        </div>
+                        <div class="input-group col-lg-12 mb-4">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                    <i class="fa fa-calendar text-muted"></i>
+                                </span>
+                            </div>
+                            <input type="date" name="lastSalesDate" placeholder="" class="form-control py-4 px-4" id="lastSalesDate">
+                        </div>
+
                         <!-- Submit Button -->
                         <div class="form-group col-lg-12 mx-auto mb-0">
                             <button class="btn btn-primary btn-block py-2">
