--- a/AppDev2ndCW/Views/Books/AddBook.cshtml
+++ b/AppDev2ndCW/Views/Books/AddBook.cshtml
@@ -59,9 +59,9 @@
                             <option value="">Choose a Category</option>
                             @foreach (var category in ViewBag.categoryList)
                             {
-                              <option value="@category.Id"> @category.Category</option>  
-                           }
-                            
+                <option value="@category.Id"> @category.Category</option>
+}
+
                         </select>
                     </div>
 
@@ -76,9 +76,8 @@
                         <select id="author" name="author" class="form-control custom-select bg-white border-left-0 border-md" required>
                             <option value="">Select an author</option>
                             @foreach (var author in ViewBag.authorList)
-                            { 
-                                <option value="@author.Id"> @author.Author</option>
-                            }
+                            {
+                <option value="@author.Id"> @author.Author</option>}
                         </select>
                     </div>
 
@@ -90,6 +89,16 @@
                             </span>
                         </div>
                         <input id="price" type="number" name="rate" placeholder="Price" class="form-control bg-white border-left-0 border-md">
+                    </div>
+
+                    <!-- Stock Quantity -->
+                    <div class="input-group col-lg-6 mb-4" required>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white px-4 border-md border-right-0">
+                                <i class="fa fa-list-ol text-muted"></i>
+                            </span>
+                        </div>
+                        <input id="quantity" type="number" name="quantity" placeholder="Quantity in Stock" class="form-control bg-white border-left-0 border-md">
                     </div>
 
 
