--- a/AppDev2ndCW/Views/Customer/Home.cshtml
+++ b/AppDev2ndCW/Views/Customer/Home.cshtml
@@ -29,7 +29,7 @@
                                 <div class="text">
                                     <a href="@Url.ActionLink("ManageCustomers", "Admin")">
                                         <img src="~/img/customers.svg" alt="Manage Customer SVG" class="img-fluid" />
-                                        <h6 class="mb-0">Manage Customers</h6>
+                                        <h6 class="mb-0">Our Customers</h6>
                                     </a>
                                 </div>
                             </div>
