--- a/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
+++ b/AppDev2ndCW/Views/Shared/_DashboardLayout.cshtml
@@ -48,7 +48,7 @@
         <nav class="navbar navbar-expand-lg px-4 py-2 bg-white shadow">
             <a href="#" class="sidebar-toggler text-gray-500 mr-4 mr-lg-5 lead"><i class="fas fa-align-left"></i></a><a href="@Url.ActionLink("Home", "Admin")" class="navbar-brand font-weight-bold text-uppercase text-base">Pustakalaya Admin Dashboard</a>
             <ul class="ml-auto d-flex align-items-center list-unstyled mb-0">
-                <li class="nav-item">
+                @*<li class="nav-item">
                     <form id="searchForm" class="ml-auto d-none d-lg-block">
                         <div class="form-group position-relative mb-0">
                             <button type="submit" style="top: -3px; left: 0;" class="position-absolute bg-white border-0 p-0"><i class="o-search-magnify-1 text-gray text-lg"></i></button>
@@ -90,9 +90,9 @@
                         </a>
                         <div class="dropdown-divider"></div><a href="#" class="dropdown-item text-center"><small class="font-weight-bold headings-font-family text-uppercase">View all notifications</small></a>
                     </div>
-                </li>
+                </li>*@
                 <li class="nav-item dropdown ml-auto">
-                    <a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="/img/user1.png" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
+                    <a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="/img/customer.svg" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
                     <div aria-labelledby="userInfo" class="dropdown-menu">
                         <a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Admin</strong></a>
                         <div class="dropdown-divider"></div>
