render out of stock items in data table

--- a/AppDev2ndCW/Views/Users/InactiveItems.cshtml
+++ b/AppDev2ndCW/Views/Users/InactiveItems.cshtml
@@ -31,23 +31,32 @@
                                         <th scope="col">Title</th>
                                         <th scope="col">Author</th>
                                         <th scope="col">Category</th>
+                                        <th scope="col">Price</th>
                                         <th scope="col">Stocked Date</th>
                                         <th scope="col">Stock Quantity</th>
                                         <th scope="col">Sales Date</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>The Alchemist</td>
-                                        <td>Paulo Coehelo</td>
-                                        <td>Novels</td>
-                                        <td>26 April, 2021</td>
-                                        <td>100</td>
-                                        <td>28 April, 2021</td>
-                                    </tr>
-
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>@item.Id</td>
+                                            <td>@item.Book_name</td>
+                                            <td>@item.Author_Id</td>
+                                            <td>@item.Category_Id</td>
+                                            <td>@item.Price</td>
+                                            <td>@item.Stocked_Date</td>
+                                            <td>@item.Stock_Quantity</td>
+                                            <td>@item.Sales_Date</td>
+                                            <th>
+                                                <a href="@Url.ActionLink("UpdateBooks", "Books")" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a>
+                                            </th>
+                                            <th>
+                                                <a href="@Url.Action("DeleteBooksInventory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
+                                            </th>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
 
