--- a/AppDev2ndCW/Views/Users/ChangePassword.cshtml
+++ b/AppDev2ndCW/Views/Users/ChangePassword.cshtml
@@ -3,6 +3,10 @@
     Layout = "_DashboardLayout";
 }
 
+@{
+    var claimsPrinciple = User.Claims;
+    var c = claimsPrinciple.Where(a => a.Type == "id").FirstOrDefault().Value ;
+}
 <div class="container">
     <div class="row">
         <div class="col-md-6 mx-auto shadow py-5">
@@ -10,7 +14,7 @@
                 <div class="col-md-10 mx-auto shadow-lg text-center py-5">
                     <img src="~/img/change_pwd.svg" alt="Change Password SVG" class="img-fluid" border="0">
                     <h2 class="text-center">Change Password</h2>
-                    <form id="add-sales-form" method="post">
+                    <form id="add-sales-form" action="/Users/EditPassword/@c" method="post">
 
                         <!-- Old Password -->
                         <div class="input-group col-lg-12 mb-4">
@@ -52,6 +56,7 @@
                     </form>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
